<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_1"
    tools:context=".CreateAccountActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_message"
        android:text="@string/welcome_to_OtterKicks"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/products"
        android:layout_width="160sp"
        android:layout_height="55sp"
        android:layout_below="@id/welcome_message"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:text="@string/products_message"/>

    <Button
        android:id="@+id/shopping_cart"
        android:layout_width="160sp"
        android:layout_height="55sp"
        android:layout_below="@id/products"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:text="@string/shopping_cart"/>



    <Button
        android:layout_width="160sp"
        android:layout_height="55sp"
        android:id="@+id/admin"
        android:layout_below="@id/shopping_cart"
        android:text="@string/admin"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/sign_out"
        android:layout_width="119dp"
        android:layout_height="59dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@id/admin"
        android:backgroundTint="@color/black"
        android:text="@string/sign_out"/>
</RelativeLayout>
