<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_1"
    tools:context=".CreateAccountActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_account_message"
        android:text="@string/create_account_page"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_margin="60dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/new_account_message"
        android:background="#30ffffff"
        android:hint="@string/new_username"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="30dp"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:padding="22dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/retype_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/retype_password"
        android:padding="22dp"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_page_button"
        android:layout_below="@id/retype_password"
        android:text="@string/create_user"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-medium"
        android:layout_centerHorizontal="true"
        android:layout_margin="42dp"/>
</RelativeLayout>
